// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots should render Heading1 with appropriate styles 1`] = `
.emotion-0 {
  margin: 0;
  font-weight: 700;
  color: #0c0d0d;
  font-weight: 700;
  font-size: 2.25rem;
  line-height: 3.375rem;
}

<h1
  className="fl-heading1 emotion-0 emotion-1"
  color="textHeading"
  fontWeight="bold"
>
  My Heading
</h1>
`;

exports[`Text Snapshots should render Heading2 with appropriate styles 1`] = `
.emotion-0 {
  margin: 0;
  font-weight: 700;
  color: #0c0d0d;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 2.25rem;
}

<h2
  className="fl-heading2 emotion-0 emotion-1"
  color="textHeading"
  fontWeight="bold"
>
  My Heading
</h2>
`;

exports[`Text Snapshots should render Heading3 with appropriate styles 1`] = `
.emotion-0 {
  margin: 0;
  font-weight: 700;
  color: #0c0d0d;
  font-weight: 700;
  font-size: 1.125rem;
  line-height: 1.875rem;
}

<h3
  className="fl-heading3 emotion-0 emotion-1"
  color="textHeading"
  fontWeight="bold"
>
  My Heading
</h3>
`;

exports[`Text Snapshots should render Heading4 with appropriate styles 1`] = `
.emotion-0 {
  margin: 0;
  font-weight: 700;
  color: #0c0d0d;
  -webkit-letter-spacing: 0.09375rem;
  -moz-letter-spacing: 0.09375rem;
  -ms-letter-spacing: 0.09375rem;
  letter-spacing: 0.09375rem;
  font-weight: 700;
  font-size: 0.75rem;
  line-height: 1.125rem;
  text-transform: uppercase;
}

<h4
  className="fl-heading4 emotion-0 emotion-1"
  color="textHeading"
  fontWeight="bold"
  letterSpacing={3}
>
  My Heading
</h4>
`;

exports[`Text Snapshots should render TextLink with appropriate styles 1`] = `
.emotion-0 {
  margin: 0;
  color: #2875c6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #2875c6;
}

<a
  className="fl-textlink emotion-0 emotion-1"
  href="www.google.com"
>
  My Heading
</a>
`;
